# daisy

./: .gitignore  NOTES.md  README.md  pyproject.toml  setup.py
daisy/: DataLoader.py  ImageDataLoader.py  ImageDataset.py  MaeFinetune.py  __init__.py  __main__.py  classfier_trainer.py  classfier_trainer_ddp.py  mae_finetune.py  mae_finetune_trainer.py  mae_trainer.py
daisy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
daisy/annotation/: __init__.py  single_annotation.py
daisy/dataset/: __init__.py  dataset_split.py  disk_dataset.py  index_dataset.py  memory_dataset.py  unlabeled_dataset.py
daisy/feeder/: __init__.py  feeder.py
daisy/labeling/: ManualClassify.py
daisy/mae/: mae_model.py  mae_pretrain.py  resnet_mae_model.py
daisy/model/: __init__.py
daisy/model/mae/: __init__.py  lr_decay.py  models_mae.py  models_vit.py  pos_embed.py
daisy/statistics/: ConfutionMatrix.py
daisy/task/: __init__.py  base.py  config.py  registry.py  runner.py  ui.py  ui_builder.py  ui_schema.py
daisy/task/tasks/: __init__.py
daisy/task/tasks/classification/: __init__.py  config.py  runner.py
daisy/task/tasks/mae_finetune/: __init__.py  config.py  runner.py
daisy/task/tasks/mae_pretrain/: __init__.py  config.py  runner.py
daisy/tools/: clip.py  gallery.py
daisy/util/: __init__.py  smile_util.py  transform.py  util.py
docs/: task 规范.md
tasks/: example.toml  example_mae_finetune.toml  example_mae_pretrain.toml
