[project]
name = "daisy"
version = "0.1.0"
description = "none"
authors = [{ name = "bakabaka", email = "example@example.com" }]
requires-python = ">=3.12"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 150
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
